--- a/client/manifest.json
+++ b/client/manifest.json
@@ -5,6 +5,7 @@
     "display": "standalone",
     "background_color": "#202b38",
     "theme_color": "#202b38",
+    "orientation": "portrait",
     "icons": [
       {
         "src": "/images/icon.png",
